Start adding results section

--- a/intro.tex
+++ b/intro.tex
@@ -68,7 +68,7 @@ Plasmas may be interesting, but that is not why countries build billion dollar r
 	\end{adjustbox}
 %	\includegraphics[width=0.75\textwidth]{images/test_image}
 	\caption{Fusion Never Funding Timeline} ~\\
-	\small Comparison of Projected Timelines of Fusion from 1976 with Actual DOE Budgets. \cite{doe87,doe19} \\ The dotted line is popularly referred to as  ``Fusion Never.'' \cite{fusionnever}
+	\small Comparison of Projected Timelines of Fusion from 1976 with Actual DOE Budgets. \cite{doe87, doe19} \\ The dotted line is popularly referred to as  ``Fusion Never.'' \cite{fusionnever}
 \end{figure}
 
 The major problem with containing a plasma in a reactor is that a plasma does not want to be contained. Since the early days of fusion research, plasmas have often found escape mechanisms. When presented with a magnetic bottle, they found their way out the top. In a tokamak, they attack the outer edges like an overinflated tire-tube. Fusion energy has seemed to remain a Tantalizing effort -- within arms reach, but staunchly guarded by a shroud of instabilities.
@@ -89,7 +89,7 @@ The two most widely used rules of thumb within the fusion design community are: 
 
 The use of the ELMy H-Mode scaling law also brings up another subtlety in the field. To measure the movement of energy within a plasma, scaling relations are needed that correlate to specific modes of plasma behavior -- i.e. ones that can robustly be found by device technicians. Currently, people rank H-Mode scalings over L-Mode (because H stands for high confinement and L stands for low). However, people often seek out other modes that can reliably be found on other machines. These go by names like: I-Mode (i.e. intermediate confinement), Enhanced H-Mode, and Reversed Shear modes. \cite{imode,enhanced,shear}
 
-Without going into too much detail, these alternate modes can be extremely valuable, as they often lead to cheaper reactor designs (than the ones made under H-Mode scaling). The problem, however, is often not finding a better performing mode on a single machine, but robustly finding it on other ones. This is important, because finding a mode on multiple machines is what allows new scaling relations to be produced and refined. In H-Mode and L-Mode's favor, they have been found on every machine that should see them.
+Without going into too much detail, these alternate modes can be extremely valuable, as they often lead to cheaper reactor designs (than the ones made under H-Mode scaling). The problem, however, is often not finding a better performing mode on a single machine, but robustly finding it on other ones. This is important, because finding a mode on multiple machines is what allows new scaling relations to be produced and refined.\footnote{ In H-Mode and L-Mode's favor, they have been found on every machine that should see them. }
 
 \section{Pricing a Fusion Reactor}
 
@@ -122,5 +122,18 @@ It serves as a cornerstone for comparing the entire landscape of tokamak reactor
 \section{Modeling a Fusion Reactor}
 
 \# todo: bridge intro to rest of paper
+
+\begin{enumerate}
+	\item MIT campaign for High-Field Reactors
+	\item Simple, quick model that matches higher dimensional codes
+	\item Motivated by a desire for intuition over preciseness
+	\item Desire to not explicitly solve elliptic integrals of the wrong kind in the complex plane
+	\item Although cost stated as important, start over from square one
+	\item Do steady-state and then pulsed and show they're basically the same
+	\item the main conclusion is HTS is the best weapon we got
+	\item jeffs quote: "by definition, mfe requires magnets"
+	\item steady state : hts toroidal field magnets :: pulsed : hts central solenoid
+	\item i.e. just use copper in steady-state no matter what
+\end{enumerate}
 
 %\end{document}
